# BrushServo

./: .gitignore  README.md  output.proto
Adaptador AX-12A/: Base_MG996R.SLDPRT  MG996R.SLDPRT  MotorAssembly.SLDASM
Adaptador AX-12A/Bearing/: Assem1.SLDASM  ball.SLDPRT  cage.SLDPRT  inner ring.SLDPRT  (+2 more)
BrushServo_F411VE/: .cproject  .mxproject  .project  BrushServo_F411VE Debug.launch  BrushServo_F411VE.ioc
F103RE_BrushServo/: .cproject  .project  F103RE_BrushServo Debug.launch  F103RE_BrushServo.ioc
G071CB-BrushServo/: .cproject  .mxproject  .project  G071CB-BrushServo Debug.launch  G071CB-BrushServo.ioc
Humanoide/: .gitignore
Servo/: Base do servo.3MF  Base do servo.SLDPRT  baseservo.3MF  baseservo.SLDPRT  centroservo.SLDPRT  egrane2latonpin.SLDPRT  egrane2latonpin.SLDPRT.SLDASM  egrane3aluminio.SLDPRT  egrane3aluminiolaton.SLDPRT.SLDASM  egrane3laton.SLDPRT  egrane4aluminio.SLDPRT  egrane4aluminiolaton.SLDPRT.SLDASM  egrane4laton.SLDPRT  engrane2.SLDPRT  otro.SLDPRT  pincorto.SLDPRT  pinlargo.SLDPRT  servo.SLDASM  tapa servo.SLDPRT
Teste de bancada/: AA8_Suporte.gcode  Cilindro.3MF  Cilindro.SLDPRT  Cubo.3MF  Cubo.SLDPRT  Encaixe suporte.3MF  Encaixe suporte.SLDPRT  Polia.3MF  Polia.SLDPRT  Suporte mesa.3MF  Suporte mesa.SLDPRT  Suporte.3MF  Suporte.SLDPRT  Suporte.STEP  Support assembly.SLDASM
Teste de bancada MG995/: Barra.SLDPRT  Barra.STL  Suporte sargento.SLDPRT  Suporte.SLDPRT
torque/: CMakeLists.txt  Encoder.cpp  Encoder.hpp  Encoder.pio  Motor.cpp  Motor.hpp  bts7960.cpp  bts7960.hpp  main.cpp  main.hpp  output.pb.c  output.pb.h
(+131 files in other folders)
